--- a/digibot.html
+++ b/digibot.html
@@ -1,88 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DigiBot</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>DigiBot – AI Chatbot Platform | Julia Alix</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <!-- Hero Section -->
-    <section class="hero">
-      <h1>Say Hello to DigiBot</h1>
-      <img src="images/digibot-hero.jpg" alt="DigiBot hero image" class="hero-image">
-      <p class="tagline">Your AI-powered digital assistant, designed to engage and assist users seamlessly.</p>
-    </section>
-    <!-- Introduction Sections -->
-    <section id="about">
-      <h2>About the App</h2>
-      <p>DigiBot is a cutting-edge AI chatbot platform that provides personalized support and information to users. It leverages advanced natural language processing to understand queries and deliver relevant responses, making digital interactions smarter and more efficient.</p>
-    </section>
-    <section id="package-offer">
-      <h2>Package I Offer</h2>
-      <p>For the DigiBot project, I provided a comprehensive development package. This package covers the full project lifecycle, including initial concept development, brand design, user experience planning, and end-to-end application implementation. My role spanned from product strategy to design and technical development to ensure a cohesive and successful outcome for the client.</p>
-    </section>
-    <section id="package-inclusion">
-      <h2>Package Inclusion</h2>
-      <ul>
-        <li><strong>Brand Identity Design:</strong> Created a unique logo, color scheme, and typography set for DigiBot to establish a memorable brand.</li>
-        <li><strong>UX/UI Wireframing:</strong> Developed detailed wireframes and interactive prototypes to map out the user journey and interface layouts.</li>
-        <li><strong>Full-Stack Development:</strong> Implemented the web application front-end and back-end, integrating AI functionalities and ensuring a responsive design.</li>
-        <li><strong>Testing & Deployment:</strong> Conducted thorough testing and provided deployment support for a smooth launch.</li>
-      </ul>
-    </section>
-    <!-- Process Section -->
-    <section id="process">
-      <h2>Process</h2>
-      <div class="process-steps">
-        <div class="step">
-          <img src="images/icon-research.png" alt="Research icon" class="step-icon">
-          <h3>Research & Planning</h3>
-          <p>Conducted market research and gathered requirements to inform DigiBot's features and design, ensuring the solution meets user needs.</p>
-        </div>
-        <div class="step">
-          <img src="images/icon-design.png" alt="Design icon" class="step-icon">
-          <h3>Design</h3>
-          <p>Created initial sketches and detailed wireframes, followed by high-fidelity mockups. Established a clear visual language and user-friendly interface through iterative design reviews.</p>
-        </div>
-        <div class="step">
-          <img src="images/icon-development.png" alt="Development icon" class="step-icon">
-          <h3>Implementation</h3>
-          <p>Developed the DigiBot application using modern web technologies. Integrated the AI backend and refined functionality through testing to ensure a robust final product.</p>
-        </div>
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="logo">
+        <span class="logo-mark"></span>
+        <span class="logo-text">Julia Alix</span>
       </div>
-    </section>
-    <!-- Design Samples Section -->
-    <section id="design-samples">
-      <h2>Design Samples</h2>
-      <div class="samples">
-        <details>
-          <summary><img src="images/digibot-branding-thumb.jpg" alt="DigiBot Branding thumbnail"> <span>Branding</span></summary>
-          <div class="sample-content">
-            <h3>Branding Design</h3>
-            <p>I crafted a bold and modern visual identity for DigiBot. Shown here are the primary logo and style guide defining the brand's colors and typography.</p>
-            <img src="images/digibot-branding-full.jpg" alt="Full DigiBot branding design sample">
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="index.html#work">Work</a>
+        <a href="index.html#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Project Section -->
+  <section class="section">
+    <div class="container">
+      <h2>Say Hello to DigiBot</h2>
+      <p class="tags">UI Design • Brand Design • Web Development</p>
+
+      <!-- Cover image -->
+      <img
+        src="https://jujualx.github.io/jjalix/Digibot_Cover.png"
+        alt="DigiBot AI chatbot platform cover"
+        style="margin-top:1rem; border-radius:24px; max-width:720px; width:100%;"
+      />
+
+      <div style="margin-top:1.5rem; max-width:720px;">
+
+        <p style="margin-top:0.25rem;">
+          Your AI-powered digital assistant, designed to engage and assist users seamlessly.
+        </p>
+
+        <h3>Overview</h3>
+        <p>
+          DigiBot is an AI-powered chatbot platform designed to provide instant support,
+          answer questions, and guide users through digital experiences. The goal was to
+          create a friendly, approachable interface that makes AI feel accessible rather
+          than intimidating.
+        </p>
+
+        <h3>My Role</h3>
+        <p>
+          End-to-end product design and development — from concept, branding, and UI/UX
+          design to front-end implementation and live deployment.
+        </p>
+
+        <h3>Goals</h3>
+        <ul>
+          <li>Create a friendly and trustworthy AI interface.</li>
+          <li>Design a clean, modern layout that feels easy to use.</li>
+          <li>Ensure the chatbot experience feels conversational and natural.</li>
+        </ul>
+
+        <h3>Key Decisions</h3>
+        <ul>
+          <li>
+            Used soft colors and rounded components to make interactions feel welcoming.
+          </li>
+          <li>
+            Kept layouts minimal so users can focus on the conversation.
+          </li>
+          <li>
+            Designed a flexible UI that can scale for different chatbot use cases.
+          </li>
+        </ul>
+
+        <h3>Process</h3>
+
+        <div class="process-grid">
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2a7 7 0 0 0-7 7c0 2.9 1.7 5.4 4 6.6V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.4c2.3-1.2 4-3.7 4-6.6a7 7 0 0 0-7-7Z"/>
+              </svg>
+            </div>
+            <h4>Research & Planning</h4>
+            <p>
+              Defined the chatbot’s purpose, audience, and feature set to ensure the
+              experience solves real user needs.
+            </p>
           </div>
-        </details>
-        <details>
-          <summary><img src="images/digibot-wireframe-thumb.jpg" alt="DigiBot Wireframe thumbnail"> <span>Wireframe</span></summary>
-          <div class="sample-content">
-            <h3>Wireframes</h3>
-            <p>I created detailed wireframe mockups for key screens to visualize and refine the user flow before moving into visual design and development.</p>
-            <img src="images/digibot-wireframe-full.jpg" alt="Full DigiBot wireframe sample">
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2a6 6 0 0 0-6 6c0 2.4 1.4 4.5 3.4 5.4L9 18h6l-.4-4.6A6 6 0 0 0 18 8a6 6 0 0 0-6-6Z"/>
+              </svg>
+            </div>
+            <h4>Brand & UI Design</h4>
+            <p>
+              Created the DigiBot brand identity, color system, and UI components,
+              followed by high-fidelity screen designs.
+            </p>
           </div>
-        </details>
-        <details>
-          <summary><img src="images/digibot-site-thumb.jpg" alt="DigiBot Site thumbnail"> <span>Live Site</span></summary>
-          <div class="sample-content">
-            <h3>Live Site Preview</h3>
-            <p>The final DigiBot web application features a clean design, intuitive navigation, and an interactive chatbot interface — all fully aligned with the branding.</p>
-            <img src="images/digibot-site-full.jpg" alt="Screenshot of the live DigiBot site">
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M4 3h6v6H4V3Zm10 0h6v6h-6V3Zm-10 10h6v6H4v-6Zm10 0h6v6h-6v-6Z"/>
+              </svg>
+            </div>
+            <h4>Build & Launch</h4>
+            <p>
+              Developed the live website using HTML and CSS, tested responsiveness,
+              and deployed the project via GitHub Pages.
+            </p>
           </div>
-        </details>
+
+        </div>
+
+        <a
+          class="btn-pill"
+          href="https://jujualx.github.io/jjalix/digibot.html"
+          target="_blank"
+          style="margin-top:1.5rem; display:inline-block;"
+        >
+          View Live Site →
+        </a>
+
       </div>
-    </section>
-  </div>
+
+      <div style="margin-top:2.5rem;">
+        <a href="index.html#work" style="font-size:0.9rem;">← Back to all projects</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
