--- a/Digibot.html
+++ b/Digibot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>DigiBot – Application | Julia Alix</title>
+  <title>DigiBot – AI Chatbot Platform | Julia Alix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -26,77 +26,110 @@
   <!-- Project Section -->
   <section class="section">
     <div class="container">
-      <h2>DigiBot – Application</h2>
-      <p class="tags">UI Design • Branding • Web App</p>
+      <h2>Say Hello to DigiBot</h2>
+      <p class="tags">UI Design • Brand Design • Web Development</p>
 
       <!-- Cover image -->
       <img
-        src="Digibot_Cover.png"
-        alt="DigiBot application cover artwork"
-        style="margin-top:1rem; border-radius:24px; max-width:720px;"
+        src="https://jujualx.github.io/jjalix/Digibot_Cover.png"
+        alt="DigiBot AI chatbot platform cover"
+        style="margin-top:1rem; border-radius:24px; max-width:720px; width:100%;"
       />
 
       <div style="margin-top:1.5rem; max-width:720px;">
+
+        <p style="margin-top:0.25rem;">
+          Your AI-powered digital assistant, designed to engage and assist users seamlessly.
+        </p>
+
         <h3>Overview</h3>
         <p>
-          DigiBot is a concept application designed around digital creativity,
-          collaboration, and learning. The interface highlights a bold color palette,
-          playful illustration, and a clean layout that supports productive work
-          without feeling too serious.
+          DigiBot is an AI-powered chatbot platform designed to provide instant support,
+          answer questions, and guide users through digital experiences. The goal was to
+          create a friendly, approachable interface that makes AI feel accessible rather
+          than intimidating.
         </p>
 
         <h3>My Role</h3>
         <p>
-          Visual direction, UI design, layout, and creating the illustration-focused
-          hero section for the main experience.
+          End-to-end product design and development — from concept, branding, and UI/UX
+          design to front-end implementation and live deployment.
         </p>
 
-        <h3>Design Goals</h3>
+        <h3>Goals</h3>
         <ul>
-          <li>Create a friendly, welcoming interface for creative users.</li>
-          <li>Use color and illustration to communicate energy and collaboration.</li>
-          <li>Keep the layout simple enough to support future feature growth.</li>
+          <li>Create a friendly and trustworthy AI interface.</li>
+          <li>Design a clean, modern layout that feels easy to use.</li>
+          <li>Ensure the chatbot experience feels conversational and natural.</li>
         </ul>
 
         <h3>Key Decisions</h3>
         <ul>
           <li>
-            A split layout with a strong hero illustration on the right to balance
-            typography and UI components on the left.
+            Used soft colors and rounded components to make interactions feel welcoming.
           </li>
           <li>
-            Rounded shapes, soft shadows, and warm accent colors to keep the brand
-            approachable.
+            Kept layouts minimal so users can focus on the conversation.
           </li>
           <li>
-            Clear hierarchy between headings, supporting text, and calls to action.
+            Designed a flexible UI that can scale for different chatbot use cases.
           </li>
         </ul>
-      </div>
 
-      <!-- Prototype / site embed -->
-      <div style="margin-top:2rem; max-width:900px;">
-        <h3>Live prototype</h3>
-        <p style="color:#6e628b; font-size:0.9rem;">
-          Explore the prototype and layout directly in the embedded page below.
-        </p>
+        <h3>Process</h3>
 
-        <div style="margin-top:0.8rem; border-radius:24px; overflow:hidden; box-shadow:0 18px 45px rgba(53,33,83,0.12);">
-          <iframe
-            style="border:0; width:100%; height:520px;"
-            src="https://white-clock-43979981.figma.site/"
-            allowfullscreen
-          ></iframe>
+        <div class="process-grid">
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2a7 7 0 0 0-7 7c0 2.9 1.7 5.4 4 6.6V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.4c2.3-1.2 4-3.7 4-6.6a7 7 0 0 0-7-7Z"/>
+              </svg>
+            </div>
+            <h4>Research & Planning</h4>
+            <p>
+              Defined the chatbot’s purpose, audience, and feature set to ensure the
+              experience solves real user needs.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2a6 6 0 0 0-6 6c0 2.4 1.4 4.5 3.4 5.4L9 18h6l-.4-4.6A6 6 0 0 0 18 8a6 6 0 0 0-6-6Z"/>
+              </svg>
+            </div>
+            <h4>Brand & UI Design</h4>
+            <p>
+              Created the DigiBot brand identity, color system, and UI components,
+              followed by high-fidelity screen designs.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M4 3h6v6H4V3Zm10 0h6v6h-6V3Zm-10 10h6v6H4v-6Zm10 0h6v6h-6v-6Z"/>
+              </svg>
+            </div>
+            <h4>Build & Launch</h4>
+            <p>
+              Developed the live website using HTML and CSS, tested responsiveness,
+              and deployed the project via GitHub Pages.
+            </p>
+          </div>
+
         </div>
 
         <a
           class="btn-pill"
-          href="https://white-clock-43979981.figma.site/"
+          href="https://jujualx.github.io/jjalix/digibot.html"
           target="_blank"
-          style="margin-top:1.3rem; display:inline-block;"
+          style="margin-top:1.5rem; display:inline-block;"
         >
-          Open project site →
+          View Live Site →
         </a>
+
       </div>
 
       <div style="margin-top:2.5rem;">
