--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h3>UnaMarket – Seller's Page</h3>
           <p>A Friendly marketplace landing page designed for onboarding sellers</p>
           <p class="tags">UI Design • Landing Page</p>
-          <a class="btn-pill" href="unamarket.html">View case study →</a>
+          <a class="btn-pill" href="Unamarket.html">View case study →</a>
         </article>
 
       </div>
