--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <div class="hero-label">SENIOR DESIGNER</div>
       <h1>
         Crafting UI Design,<br>
-        Branding, and Visuals to<br>
-        create fun, friendly and<br>
+        Branding, and Visuals to create fun, friendly and<br>
         intentional experiences.
       </h1>
       <p class="hero-sub">
