--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 
 <body>
 
-  <!-- Top Navigation -->
+    <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
+
+      <!-- LOGO (UPDATED) -->
       <div class="logo">
-        <span class="logo-mark"></span>
-        <span class="logo-text">Julia Alix</span>
+        <a href="index.html">
+          <img 
+            src="J_Branding.png"
+            alt="Julia Alix Brand Mark"
+            class="logo-mark-image"
+          />
+        </a>
       </div>
 
       <nav class="nav">
