--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 <body>
 
-    <!-- Header -->
+      <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
 
-      <!-- LOGO (UPDATED) -->
+      <!-- LOGO (UPDATED AGAIN) -->
       <div class="logo">
         <a href="index.html">
           <img 
-            src="J_Branding.png"
-            alt="Julia Alix Brand Mark"
+            src="FLOWER.png"
+            alt="Julia Alix Flower Mark"
             class="logo-mark-image"
           />
         </a>
