--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <a href="index.html">
           <img 
-            src="FLOWER.png"
+            src="Moon.png"
             alt="Julia Alix Flower Mark"
             class="logo-mark-image"
           />
