--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 
 <body>
 
-      <!-- Header -->
-  <header class="site-header">
-    <div class="container header-inner">
+    <div class="logo">
+  <a href="index.html" class="logo-link">
+    <img 
+      src="Moon.png"
+      alt="Julia Alix Flower Mark"
+      class="logo-mark-image"
+    />
+    <span class="logo-text">Julia Alix</span>
+  </a>
+</div>
 
-      <!-- LOGO (UPDATED AGAIN) -->
-      <div class="logo">
-        <a href="index.html">
-          <img 
-            src="Moon.png"
-            alt="Julia Alix Flower Mark"
-            class="logo-mark-image"
-          />
-        </a>
-      </div>
 
       <nav class="nav">
         <a href="#work">Work</a>
