--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 
 <body>
 
+  <header class="site-header">
+  <div class="container header-inner">
     <div class="logo">
-  <a href="index.html" class="logo-link">
-    <img 
-      src="Moon.png"
-      alt="Julia Alix Flower Mark"
-      class="logo-mark-image"
-    />
-    <span class="logo-text">Julia Alix</span>
-  </a>
-</div>
+      <span class="logo-mark"></span>
+      <span class="logo-text">Julia Alix</span>
+    </div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="#work">Work</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
 
 
       <nav class="nav">
