--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
 <body>
 
-  <header class="site-header">
+<header class="site-header">
   <div class="container header-inner">
     <div class="logo">
-      <span class="logo-mark"></span>
+      <img
+        src="Moon.png"
+        alt="Julia Alix Icon"
+        class="logo-icon"
+      />
       <span class="logo-text">Julia Alix</span>
     </div>
+
     <nav class="nav">
       <a href="#work">Work</a>
       <a href="#about">About</a>
@@ -22,6 +27,7 @@
     </nav>
   </div>
 </header>
+
 
 
   <!-- Hero Section (Updated) -->
