--- a/index.html
+++ b/index.html
@@ -91,6 +91,57 @@
     </div>
   </section>
 
+
+    <!-- NEW: Graphic Design thumbnails -->
+        <div class="graphic-section">
+          <h3 class="section-title">Graphic Design Highlights</h3>
+          <p class="section-subtitle">A few thumbnails from my graphic design works.</p>
+
+          <div class="thumb-grid">
+
+            <!-- 1 -->
+            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
+              <img class="thumb-img" src="GD_Thumb_01.png" alt="Graphic Design work 1 thumbnail" />
+              <div class="thumb-meta">
+                <p class="thumb-title">Poster / Social Creative</p>
+                <p class="thumb-tag">Graphic Design</p>
+              </div>
+            </a>
+
+            <!-- 2 -->
+            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
+              <img class="thumb-img" src="GD_Thumb_02.png" alt="Graphic Design work 2 thumbnail" />
+              <div class="thumb-meta">
+                <p class="thumb-title">Branding / Layout</p>
+                <p class="thumb-tag">Graphic Design</p>
+              </div>
+            </a>
+
+            <!-- 3 -->
+            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
+              <img class="thumb-img" src="GD_Thumb_03.png" alt="Graphic Design work 3 thumbnail" />
+              <div class="thumb-meta">
+                <p class="thumb-title">Packaging / Label</p>
+                <p class="thumb-tag">Graphic Design</p>
+              </div>
+            </a>
+
+            <!-- 4 -->
+            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
+              <img class="thumb-img" src="GD_Thumb_04.png" alt="Graphic Design work 4 thumbnail" />
+              <div class="thumb-meta">
+                <p class="thumb-title">Illustration / Asset</p>
+                <p class="thumb-tag">Graphic Design</p>
+              </div>
+            </a>
+
+          </div>
+        </div>
+        <!-- END NEW -->
+
+      </div>
+    </section>
+
   <!-- About -->
   <section id="about" class="section">
     <div class="container">
