--- a/index.html
+++ b/index.html
@@ -92,55 +92,62 @@
   </section>
 
 
-    <!-- NEW: Graphic Design thumbnails -->
-        <div class="graphic-section">
-          <h3 class="section-title">Graphic Design Highlights</h3>
-          <p class="section-subtitle">A few thumbnails from my graphic design works.</p>
+   <!-- Graphic Design Works -->
+<section class="work" id="graphic">
+  <div class="container">
+    <h2>Graphic Design Works</h2>
+    <p>A few selected visual and branding pieces.</p>
 
-          <div class="thumb-grid">
+    <div class="work-grid">
 
-            <!-- 1 -->
-            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
-              <img class="thumb-img" src="GD_Thumb_01.png" alt="Graphic Design work 1 thumbnail" />
-              <div class="thumb-meta">
-                <p class="thumb-title">Poster / Social Creative</p>
-                <p class="thumb-tag">Graphic Design</p>
-              </div>
-            </a>
-
-            <!-- 2 -->
-            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
-              <img class="thumb-img" src="GD_Thumb_02.png" alt="Graphic Design work 2 thumbnail" />
-              <div class="thumb-meta">
-                <p class="thumb-title">Branding / Layout</p>
-                <p class="thumb-tag">Graphic Design</p>
-              </div>
-            </a>
-
-            <!-- 3 -->
-            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
-              <img class="thumb-img" src="GD_Thumb_03.png" alt="Graphic Design work 3 thumbnail" />
-              <div class="thumb-meta">
-                <p class="thumb-title">Packaging / Label</p>
-                <p class="thumb-tag">Graphic Design</p>
-              </div>
-            </a>
-
-            <!-- 4 -->
-            <a class="thumb-card" href="https://www.behance.net/" target="_blank" rel="noopener">
-              <img class="thumb-img" src="GD_Thumb_04.png" alt="Graphic Design work 4 thumbnail" />
-              <div class="thumb-meta">
-                <p class="thumb-title">Illustration / Asset</p>
-                <p class="thumb-tag">Graphic Design</p>
-              </div>
-            </a>
-
-          </div>
+      <!-- Card 1 -->
+      <article class="work-card">
+        <div class="work-cover">
+          <img src="GD_Thumb_01.png" alt="Graphic Design work 1" />
         </div>
-        <!-- END NEW -->
+        <h3>Social Media Campaign</h3>
+        <p>A set of playful, vibrant creatives designed for engagement and clarity.</p>
+        <p class="work-tags">Graphic Design • Social Media</p>
+        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
 
-      </div>
-    </section>
+      <!-- Card 2 -->
+      <article class="work-card">
+        <div class="work-cover">
+          <img src="GD_Thumb_02.png" alt="Graphic Design work 2" />
+        </div>
+        <h3>Brand Kit / Identity</h3>
+        <p>Logo, typography, and layout system built to feel friendly and consistent.</p>
+        <p class="work-tags">Branding • Identity</p>
+        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="work-card">
+        <div class="work-cover">
+          <img src="GD_Thumb_03.png" alt="Graphic Design work 3" />
+        </div>
+        <h3>Packaging & Label</h3>
+        <p>Clean packaging design with clear hierarchy and shelf-ready visuals.</p>
+        <p class="work-tags">Graphic Design • Packaging</p>
+        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+      <!-- Card 4 -->
+      <article class="work-card">
+        <div class="work-cover">
+          <img src="GD_Thumb_04.png" alt="Graphic Design work 4" />
+        </div>
+        <h3>Posters / Prints</h3>
+        <p>Bold layout explorations for print—designed to feel fun and memorable.</p>
+        <p class="work-tags">Graphic Design • Print</p>
+        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+    </div>
+  </div>
+</section>
+
 
   <!-- About -->
   <section id="about" class="section">
